[package]
name = "magic-sys-req"
version = "0.1.0"
authors = ["Caleb Xavier Berger <caleb.x.berger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
irc = "0.13.6"
rand = "0.7"
regex = "1"
tokio = { version = "0.2", features = ["full"] }
